# oss-llm-japanese

./: .gitignore  Makefile  README.md  pyproject.toml  set_git_template.sh  test.txt
.github/: commit_template.txt
.github/workflows/: ruff.yml
oss_llm_japanese/: main.py
src/collection/: test.txt
src/posttraining/tmp_data/: chatbot_arena_ja_annotated_0_to_499.csv  chatbot_arena_ja_annotated_0_to_499_sjis.csv  chatbot_arena_ja_annotated_0_to_499_sjis.xlsx  chatbot_arena_ja_annotated_10000_to_10499.csv  chatbot_arena_ja_annotated_10500_to_10999.csv  chatbot_arena_ja_annotated_11000_to_11499.csv  chatbot_arena_ja_annotated_11500_to_11999.csv  chatbot_arena_ja_annotated_12000_to_12499.csv  chatbot_arena_ja_annotated_12500_to_12999.csv  chatbot_arena_ja_annotated_1500_to_1999.csv  chatbot_arena_ja_annotated_2000_to_2499.csv  chatbot_arena_ja_annotated_2500_to_2999.csv  chatbot_arena_ja_annotated_3000_to_3499.csv  chatbot_arena_ja_annotated_3500_to_3999.csv  chatbot_arena_ja_annotated_4000_to_4499.csv  chatbot_arena_ja_annotated_4500_to_4999.csv  chatbot_arena_ja_annotated_5000_to_5499.csv  chatbot_arena_ja_annotated_500_to_999.csv  chatbot_arena_ja_annotated_5500_to_5999.csv  chatbot_arena_ja_annotated_6000_to_6499.csv  chatbot_arena_ja_annotated_6500_to_6999.csv  chatbot_arena_ja_annotated_7000_to_7499.csv  chatbot_arena_ja_annotated_7500_to_7999.csv  chatbot_arena_ja_annotated_8000_to_8499.csv  chatbot_arena_ja_annotated_8500_to_8999.csv  chatbot_arena_ja_annotated_9000_to_9499.csv  chatbot_arena_ja_annotated_9500_to_9999.csv
src/preprocessing/scripts/: filters.py  (+3 more)
(+107 files in other folders)
